# pyrtdd

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile-ci  LICENSE.txt  README.md  environment.yml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
package/: CMakeLists.txt
package/src/: CMakeLists.txt  main.cpp  nanobind_example_ext.cpp
package/src/pyrtdd/hdd/: ObspyWaveformProxy.cpp  __init__.py  catalog_ext.cpp  dd_ext.cpp  hdd_ext.cpp  homogeneous_ext.cpp  log_ext.cpp  nllgrid_ext.cpp  nllttt_ext.cpp  proxy_ext.cpp  trace_ext.cpp  ttt_ext.cpp  utc_clock_ext.cpp
package/src/pyrtdd/obspy/: waveform.py
package/src/scrtdd/: __init__.py
package/src/scrtdd/hdd/: ObspyWaveformProxy.cpp  ObspyWaveformProxy.h  __init__.py  catalog.cpp  catalog_ext.cpp  cvttt_ext.cpp  dd.cpp  dd_ext.cpp  hdd.cpp  hdd_ext.cpp
package/test/: CMakeLists.txt  main.cpp  test.cpp
package/test/py/: test_dd_ext.py  test_obspy_waveform.py
package/test/py/data/: relocated-event.csv  relocated-phase.csv  relocated-station.csv  starting-event.csv  starting-phase.csv
