CMAKE_MINIMUM_REQUIRED (VERSION 3.23 FATAL_ERROR)

PROJECT (
  MyProject
  VERSION 0.0.1
  DESCRIPTION ""
  LANGUAGES CXX
)

SET (CMAKE_CXX_STANDARD 20)
SET (CMAKE_CXX_EXTENSIONS OFF)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_POSITION_INDEPENDENT_CODE ON)

ADD_SUBDIRECTORY (deps)
ADD_SUBDIRECTORY (package)
