FIND_PACKAGE (
  Python
  COMPONENTS Interpreter Development.Module
  REQUIRED
)

EXECUTE_PROCESS (
  COMMAND "${Python_EXECUTABLE}" -c
          "import nanobind; print (nanobind.cmake_dir())"
  OUTPUT_VARIABLE _tmp_dir
  OUTPUT_STRIP_TRAILING_WHITESPACE COMMAND_ECHO STDOUT
)

LIST (APPEND CMAKE_PREFIX_PATH "${_tmp_dir}")
FIND_PACKAGE (nanobind CONFIG REQUIRED)

SET (HDD_EXT_DIR scrtdd/hdd)
SET (SOURCES ${HDD_EXT_DIR}/dd_ext.cpp)
NANOBIND_ADD_MODULE (dd_ext NB_STATIC ${SOURCES})

TARGET_LINK_LIBRARIES (dd_ext PRIVATE hdd)
INSTALL (TARGETS dd_ext LIBRARY DESTINATION ./hdd)
